k8s/apps/glances/glances-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glances
  namespace: default
spec:
  ports:
  - name: port-61208
    port: 61208
    targetPort: 61208
  selector:
    app: glances
